[doc] Review release notes
- make sure, everything is mentioned in both files
- unify formatting
- combine java 21/22 changes
- sort language related changes alphabetically